// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when applied with \`exclude\` option matches snapshot for a single \`exclude\` value ({RegExp}): assets 1`] = `
Array [
  Array [
    "0.async.js.gz?ver=81982f432266ef1edd1a",
    117,
  ],
  Array [
    "0.async.js?ver=81982f432266ef1edd1a",
    130,
  ],
  Array [
    "5b1f36bc41ab31f5b801d48ba1d65781.png",
    78117,
  ],
  Array [
    "5b1f36bc41ab31f5b801d48ba1d65781.png.gz",
    73160,
  ],
  Array [
    "96621d3c37d96ad3bf792fcc848d912f.svg",
    672,
  ],
  Array [
    "js.js.gz?var=81982f432266ef1edd1a",
    2802,
  ],
  Array [
    "js.js?var=81982f432266ef1edd1a",
    10221,
  ],
]
`;

exports[`when applied with \`exclude\` option matches snapshot for a single \`exclude\` value ({RegExp}): errors 1`] = `Array []`;

exports[`when applied with \`exclude\` option matches snapshot for a single \`exclude\` value ({RegExp}): warnings 1`] = `Array []`;

exports[`when applied with \`exclude\` option matches snapshot for multiple \`exclude\` values ({Array<RegExp>}): assets 1`] = `
Array [
  Array [
    "0.async.js.gz?ver=81982f432266ef1edd1a",
    117,
  ],
  Array [
    "0.async.js?ver=81982f432266ef1edd1a",
    130,
  ],
  Array [
    "5b1f36bc41ab31f5b801d48ba1d65781.png",
    78117,
  ],
  Array [
    "96621d3c37d96ad3bf792fcc848d912f.svg",
    672,
  ],
  Array [
    "js.js.gz?var=81982f432266ef1edd1a",
    2802,
  ],
  Array [
    "js.js?var=81982f432266ef1edd1a",
    10221,
  ],
]
`;

exports[`when applied with \`exclude\` option matches snapshot for multiple \`exclude\` values ({Array<RegExp>}): errors 1`] = `Array []`;

exports[`when applied with \`exclude\` option matches snapshot for multiple \`exclude\` values ({Array<RegExp>}): warnings 1`] = `Array []`;
